--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ticket" data-dismiss="modal">1</button></th>
+                        <th scope="row"><button type="button" class="btn btn-primary btn_empty" data-toggle="modal" data-target="#ticket" data-dismiss="modal">1</button></th>
                         <td>3.50€</td>
                         <td>13-05-2020 14:57:41</td>
                       </tr>
