--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
 <body>
     <div class="container">
         <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target="#caja">Caja</button>
-        <button type="button" class="btn btn-outline-primary btn-lg">Fichar</button> 
+        <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target="#fichar">Fichar</button> 
         <button type="button" class="btn btn-outline-primary btn-lg">Tickets a pagar</button>
         <button type="button" class="btn btn-outline-primary btn-lg">Configurar PC</button>
+        <button type="button" class="btn btn-outline-primary btn-lg">Entrada dinero</button>
+        <button type="button" class="btn btn-outline-primary btn-lg">Salida dinero</button>
     </div>
     <div class="version">
         <p class="vers mb-0">Version 2.0.1</p>
     </div>
 
-    <!-- Modal -->
+    <!-- INICIO MODALES PRINCIPALES -->
+    <!-- Inicio modal caja -->
     <div class="modal fade" id="caja" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -63,8 +66,59 @@
             <button type="button" class="btn btn-secondary" data-dismiss="modal">OK!</button>
             </div>
         </div>
-        </div>
+      </div>
     </div>
+    <!-- Fin modal caja -->
+    <!-- Inicio modal fichar -->
+    <div class="modal fade" id="fichar" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">Fichar</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="md-form mt-0">
+              <input class="form-control" type="text" placeholder="Introduce tu nombre" aria-label="Search">
+            </div>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th scope="col">Nombre</th>
+                  <th scope="col">Nombre completo</th>
+                  <th scope="col">Fichar/Desfichar</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Santi</td>
+                  <td>Santiago Álvarez Osuca</td>
+                  <td><a href="#" class="btn btn-outline-primary btn_fc">FICHAR</a></td>
+                </tr>
+                <tr>
+                  <td>Pepe</td>
+                  <td>Pepe Alberto Fernandez</td>
+                  <td><a href="#" class="btn btn-outline-success btn_fc">DESFICHAR</a></td>
+                </tr>
+                <tr>
+                  <td>Esther</td>
+                  <td>Esther García Perez</td>
+                  <td><a href="#" class="btn btn-outline-primary btn_fc">FICHAR</a></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">OK!</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Fin modal fichar -->
+    <!-- FIN MODALES PRINCIPALES -->
+    <!-- INICIO MODALES EXTRAS -->
     <!-- Visualizacion tickets -->
     <div class="modal fade" id="ticket" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -92,5 +146,7 @@
           </div>
         </div>
       </div>
+    </div>
+    <!-- FIN MODALES EXTRAS -->
 </body>
 </html>
